ns-development.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: development
  labels:
    type: development
spec: {}
status: {}
