ns-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: production
  labels:
    type: production
spec: {}
status: {}
