nginx-dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    type: development
  name: nginx-dev-svc
  namespace: development
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    type: development
  type: ClusterIP
status:
  loadBalancer: {}
