nginx-prod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    type: production
  name: nginx-prod-svc
  namespace: production
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    type: production
  type: ClusterIP
status:
  loadBalancer: {}
