network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-different-namespace-policy
  namespace: development
spec:
  podSelector:
    matchLabels:
      type: development
  ingress:
  - from:
    - podSelector:
        matchLabels:
          type: production
      namespaceSelector:
        matchLabels:
          type: production
    ports:
     - protocol: TCP
       port: 80
